footer name clipping fixed, new nixpkgs

--- a/theme/assets/css/footer.css
+++ b/theme/assets/css/footer.css
@@ -70,6 +70,9 @@
 
 .filename a{
   color: #c9d1d9;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .filename i{
